# nps-hikes

./: .bandit  .coderabbit.yaml  .cursorrules  .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .vale.ini  404.html  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  db_writer.py  docker-compose.test.yml  docker-compose.yml  gmaps_hiking_importer.py  index.html  llms.txt  lychee.toml  mkdocs.yml  nps_collector.py  nps_db_writer.py  osm_hikes_collector.py  parks.csv  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  reset_database.py  robots.txt  sitemap.xml  test_nps_collector.py  tnm_hikes_collector.py  trail_matcher.py  usgs_elevation_collector.py
.claude/commands/: clean-ai-writing.md
.github/instructions/: docs.instructions.md  python.instructions.md
.github/workflows/: deploy-data.yml  deploy-docs.yml  docs-lint.yml  integration-tests.yml  prose-lint.yml  security-audit.yml  unit-tests.yml
api/: __init__.py  database.py  main.py  models.py  queries.py
api-tutorial/: index.html
api/nlq/: generator.py  ollama_client.py  park_lookup.py  parser.py  prompt.py  rate_limit.py
artifacts/: .gitkeep  README.md
config/: __init__.py  settings.py  test_config.py
data/: index.html
docker/: Dockerfile.db  init-db.sh
docs/: api-tutorial.md  data-sources.md  data.md  deployment.md  getting-started.md  index.md  mcp.md
getting-started/: index.html
mcp/: index.html
nps_hikes_mcp/: __init__.py  http_server.py  resources.py  server.py  tools.py
plans/: api-geo-implementation.md  api-geo.md  automate-profiling.md  claude-optimization.md  code-sample-lint.md  docs-lint.md  docs-seo-aeo-implementation-plan.md  hybrid-search-implementation-plan.md  local-dev-db-clarification-summary.md  mcp-concepts.md  mcp-spec.md  mcp-v1-verification-checklist.md  mcp-v2-plan.md  mcp-v3-plan.md  mcp-v4-plan.md  mcp-v4-validation-followup-month-normalization.md  mcp-walkthrough.md  nlq-critique.md  nlq-implementation-notes.md  nlq-walkthrough.md  rag-context.md  rag-evolution-summary.md  rag-plan.md  sdk-plan.md  semantic-search-plan.md  streamlit-hybrid-ux-update.md  streamlit-webapp-plan.md  trail-type-removal.md
profiling/: __init__.py  basic_stats.py  config.py  orchestrator.py  utils.py
profiling/modules/: __init__.py  basic_stats.py  data_freshness.py  data_quality.py  geographic_analysis.py  gmaps_hiking_locations.py  nps_geography.py  nps_parks.py  osm_hikes.py  tnm_hikes.py  trail_3d_viz.py  trail_matching.py  us_park_map.py  usgs_elevation.py  usgs_elevation_stats.py  usgs_elevation_viz.py  usgs_trail_elevation.py  visualization.py
profiling/queries/: collection_status_summary.sql  data_completeness_summary.sql  park_counts_by_state.sql
raw_data/: gmaps_nps_trails.kml  google-maps-trails.kml  park_visit_log.csv  parks.csv
raw_data/gmaps/: nps_points_cave.kml  nps_points_cuva.kml  nps_points_lavo.kml  nps_points_meve.kml  nps_points_zion.kml
scripts/: __init__.py  orchestrator.py
scripts/collectors/: __init__.py  gmaps_hiking_importer.py  nps_collector.py  nps_content_collector.py  nps_content_schemas.py  (+7 more)
search/: search_index.json
streamlit_app/: README.md  __init__.py  app.py  requirements.in
tests/: __init__.py  conftest.py  test_api.py
utils/: __init__.py  embedding_client.py  exceptions.py  logging.py
(+116 files in other folders)
