[project]
name = "nps-hikes"
version = "1.0.0"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later
ignore_missing_imports = true  # Ignore libraries without type stubs

[tool.isort]
profile = "black"
