[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nps-hikes"
dynamic = ["version"]
requires-python = ">=3.12"
license = {text = "CC-BY-NC-SA-4.0"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true  # Ignore libraries without type stubs
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.setuptools]
packages = []

[tool.setuptools_scm]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade (modernize syntax)
    "RUF",  # ruff-specific rules
]
ignore = [
    "E402",  # module-import-not-at-top (needed for sys.path manipulation)
    "E501",  # line-too-long (ruff formatter handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # test fixtures often appear unused
"config/*" = ["RUF012"]  # mutable defaults are safe in Pydantic settings
